--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "copy-webpack-plugin": "^4.6.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "react-hot-loader": "^4.3.12",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
@@ -27,6 +28,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.9.1",
     "dotenv": "^6.1.0",
     "polished": "^2.3.0",
     "prop-types": "^15.6.2",
