--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build-job:
     docker:
-      - image: circleci/node:9.10-browsers
+      - image: circleci/node:9.10.0-browsers
 
     steps:
       - checkout
@@ -31,7 +31,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Deploy to S3 if tests pass and branch is Master
+          name: Deploy to S3
           command: |
             sudo apt-get install python-dev python-pip
             sudo pip install awscli
