--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build-job:
     docker:
-      - image: circleci/node:9.10.0-browsers
+      - image: node:9.10.0-alpine
 
     steps:
       - checkout
