--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prettier": "^1.15.2",
     "pretty-quick": "^1.8.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
