--- a/package.json
+++ b/package.json
@@ -59,12 +59,14 @@
   },
   "dependencies": {
     "dotenv": "^6.1.0",
+    "lodash": "^4.17.11",
     "polished": "^2.3.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.12",
     "react-router-dom": "^4.3.1",
-    "styled-components": "^4.1.1"
+    "styled-components": "^4.1.1",
+    "styled-tools": "^1.6.0"
   }
 }
