--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "dependencies": {
     "dotenv": "^6.1.0",
+    "formik": "^1.3.2",
     "lodash": "^4.17.11",
     "polished": "^2.3.0",
     "prop-types": "^15.6.2",
@@ -69,6 +70,7 @@
     "react-router-dom": "^4.3.1",
     "react-styled-carousel": "^0.4.12",
     "styled-components": "^4.1.1",
-    "styled-tools": "^1.6.0"
+    "styled-tools": "^1.6.0",
+    "yup": "^0.26.6"
   }
 }
