--- a/package.json
+++ b/package.json
@@ -59,12 +59,16 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.22",
     "dotenv": "^6.1.0",
     "formik": "^1.3.2",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
     "lodash": "^4.17.11",
     "polished": "^2.3.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.12",
     "react-router-dom": "^4.3.1",
