--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
+    "@bugsnag/js": "^5.0.2",
+    "@bugsnag/plugin-react": "^5.0.2",
     "apollo-boost": "^0.1.22",
     "dotenv": "^6.1.0",
     "formik": "^1.3.2",
