improved loader and routing

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "formik": "^1.4.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
+    "history": "^4.7.2",
     "lodash": "^4.17.11",
     "polished": "^2.3.0",
     "prop-types": "^15.6.2",
