--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 APP_ENV="development"
-API_URL="localhost:3002"
+API_URL="http://localhost:3090"
 DEV_PORT="3000"
 BUGSNAG_API_KEY="bug-snag-api-key"
