--- a/package.json
+++ b/package.json
@@ -61,15 +61,24 @@
   "dependencies": {
     "@bugsnag/js": "^5.0.2",
     "@bugsnag/plugin-react": "^5.0.2",
-    "apollo-boost": "^0.1.22",
+    "apollo-cache-inmemory": "^1.3.12",
+    "apollo-client": "^2.4.8",
+    "apollo-link": "^1.2.6",
+    "apollo-link-context": "^1.0.12",
+    "apollo-link-error": "^1.1.5",
+    "apollo-link-http": "^1.5.9",
+    "apollo-link-state": "^0.4.2",
     "dotenv": "^6.1.0",
     "formik": "^1.4.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "history": "^4.7.2",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "polished": "^2.3.0",
+    "possible-states": "^1.3.2",
     "prop-types": "^15.6.2",
+    "query-string": "^6.2.0",
     "react": "^16.6.3",
     "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
