changed bucket name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
             sudo pip install awscli
             yarn install
             yarn build
-            aws s3 sync ~/project/dist s3://healfit.com --delete
+            aws s3 sync ~/project/dist s3://healfit.co.uk --delete
 workflows:
   version: 2
   build-deploy:
