--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
           name: Deploy to S3
           environment:
             API_URL: http://api.healfit.co.uk
+            BUGSNAG_API_KEY: 3ed18fabf2445b22b785f539282a439a
           command: |
             sudo apt-get install python-dev python-pip
             sudo pip install awscli
