--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.12",
+    "react-pose": "^4.0.5",
     "react-router-dom": "^4.3.1",
     "react-styled-carousel": "^0.4.12",
     "styled-components": "^4.1.1",
