--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.5",
     "husky": "^1.2.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.2",
@@ -90,6 +90,7 @@
     "react-styled-carousel": "^0.4.12",
     "styled-components": "^4.1.1",
     "styled-tools": "^1.6.0",
+    "toposort": "^2.0.2",
     "yup": "^0.26.6"
   }
 }
