--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
           environment:
             API_URL: http://api.healfit.co.uk
             BUGSNAG_API_KEY: 3ed18fabf2445b22b785f539282a439a
+            GA_API_KEY: UA-132673441-1
           command: |
             sudo apt-get install python-dev python-pip
             sudo pip install awscli
