--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
+    "@bugsnag/browser": "^5.1.0",
     "@bugsnag/js": "^5.0.2",
     "@bugsnag/plugin-react": "^5.0.2",
     "apollo-cache-inmemory": "^1.3.12",
@@ -84,10 +85,10 @@
     "react": "^16.6.3",
     "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
+    "react-ga": "^2.5.6",
     "react-hot-loader": "^4.3.12",
     "react-pose": "^4.0.5",
     "react-router-dom": "^4.3.1",
-    "react-styled-carousel": "^0.4.12",
     "styled-components": "^4.1.1",
     "styled-tools": "^1.6.0",
     "toposort": "^2.0.2",
