--- a/package.json
+++ b/package.json
@@ -82,13 +82,13 @@
     "possible-states": "^1.3.2",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
-    "react": "^16.6.3",
+    "react": "^16.7.0",
     "react-apollo": "^2.3.2",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.7.0",
     "react-ga": "^2.5.6",
     "react-hot-loader": "^4.3.12",
     "react-pose": "^4.0.5",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "4.4.0-beta.5",
     "styled-components": "^4.1.1",
     "styled-tools": "^1.6.0",
     "toposort": "^2.0.2",
