--- a/package.json
+++ b/package.json
@@ -90,7 +90,9 @@
     "react-ga": "^2.5.6",
     "react-hot-loader": "^4.3.12",
     "react-pose": "^4.0.5",
+    "react-progressive-list": "^0.1.2",
     "react-router-dom": "4.4.0-beta.5",
+    "react-sortable-hoc": "^1.5.3",
     "react-svg": "^7.2.5",
     "styled-components": "^4.1.1",
     "styled-tools": "^1.6.0",
