aded method to recipe

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "history": "^4.7.2",
+    "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "polished": "^2.3.0",
@@ -94,6 +95,9 @@
     "react-router-dom": "4.4.0-beta.5",
     "react-sortable-hoc": "^1.5.3",
     "react-svg": "^7.2.5",
+    "slate": "^0.44.10",
+    "slate-plain-serializer": "^0.6.34",
+    "slate-react": "^0.21.16",
     "styled-components": "^4.1.1",
     "styled-tools": "^1.6.0",
     "toposort": "^2.0.2",
