--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ API_URL="http://localhost:3090"
 DEV_PORT="3000"
 BUGSNAG_API_KEY="bug-snag-api-key"
 GA_API_KEY="google-analytics-api-key"
+
+CLOUDINARY_PRESET="cloudinary-preset"
