--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "apollo-link-error": "^1.1.5",
     "apollo-link-http": "^1.5.9",
     "apollo-link-state": "^0.4.2",
+    "cloudinary-react": "^1.1.0",
     "dotenv": "^6.1.0",
     "formik": "^1.4.1",
     "graphql": "^14.0.2",
