--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "react-sortable-hoc": "^1.5.3",
     "react-svg": "^7.2.5",
     "slate": "^0.44.10",
+    "slate-html-serializer": "^0.7.34",
     "slate-plain-serializer": "^0.6.34",
     "slate-react": "^0.21.16",
     "styled-components": "^4.1.1",
