--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.1.6",
+    "@babel/core": "^7.3.3",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-async-to-generator": "^7.2.0",
@@ -33,10 +33,10 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
-    "babel-plugin-styled-components": "^1.9.1",
+    "babel-plugin-styled-components": "^1.10.0",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
-    "eslint": "^5.9.0",
+    "eslint": "^5.14.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-import-resolver-webpack": "^0.10.1",
@@ -55,9 +55,9 @@
     "react-svg-loader": "^2.1.0",
     "terser-webpack-plugin": "^1.2.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.26.1",
+    "webpack": "^4.29.5",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
+    "webpack-dev-server": "^3.2.0",
     "webpack-merge": "^4.1.4",
     "webpack-visualizer-plugin": "^0.1.11"
   },
@@ -81,16 +81,17 @@
     "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
+    "pettier": "^1.1.0",
     "polished": "^2.3.0",
     "possible-states": "^1.3.2",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
-    "react": "^16.7.0",
+    "react": "^16.8.2",
     "react-apollo": "^2.3.2",
     "react-contenteditable": "^3.2.6",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.2",
     "react-ga": "^2.5.6",
-    "react-hot-loader": "^4.3.12",
+    "react-hot-loader": "^4.7.1",
     "react-pose": "^4.0.5",
     "react-progressive-list": "^0.1.2",
     "react-router-dom": "4.4.0-beta.5",
