--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "history": "^4.7.2",
+    "html-to-react": "^1.3.4",
     "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
