added uikit dashboard

--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "apollo-link-error": "^1.1.5",
     "apollo-link-http": "^1.5.9",
     "apollo-link-state": "^0.4.2",
+    "classnames": "^2.2.6",
     "cloudinary-react": "^1.1.0",
+    "css-loader": "^2.1.1",
     "dotenv": "^6.1.0",
     "formik": "1.5",
     "graphql": "^14.0.2",
@@ -103,6 +105,7 @@
     "slate-html-serializer": "^0.7.34",
     "slate-plain-serializer": "^0.6.34",
     "slate-react": "^0.21.16",
+    "style-loader": "^0.23.1",
     "styled-components": "^4.1.1",
     "styled-tools": "^1.6.0",
     "toposort": "^2.0.2",
