--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
+    "node-sass": "^4.11.0",
     "pettier": "^1.1.0",
     "polished": "^2.3.0",
     "possible-states": "^1.3.2",
@@ -101,6 +102,7 @@
     "react-router-dom": "4.4.0-beta.5",
     "react-sortable-hoc": "^1.5.3",
     "react-svg": "^7.2.5",
+    "sass-loader": "^7.1.0",
     "slate": "^0.44.10",
     "slate-html-serializer": "^0.7.34",
     "slate-plain-serializer": "^0.6.34",
