refactored authentication hanfling

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "lint-staged": {
     "*.{js,jsx}": [
       "pretty-quick --staged",
-      "eslint src/ --fix",
+      "eslint",
       "git add"
     ]
   },
@@ -84,6 +84,7 @@
     "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "pettier": "^1.1.0",
     "polished": "^2.3.0",
