--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "react-progressive-list": "^0.1.2",
     "react-render-html": "^0.6.0",
     "react-router-dom": "4.4.0-beta.5",
+    "react-share": "^2.4.0",
     "react-sortable-hoc": "^1.5.3",
     "react-svg": "^7.2.5",
     "sass-loader": "^7.1.0",
