--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.2.0",
     "webpack-merge": "^4.1.4",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "webpack-visualizer-plugin": "^0.1.11",
+    "workbox-webpack-plugin": "^4.1.1"
   },
   "dependencies": {
     "@bugsnag/browser": "^5.1.0",
@@ -105,6 +106,7 @@
     "react-sortable-hoc": "^1.5.3",
     "react-svg": "^7.2.5",
     "sass-loader": "^7.1.0",
+    "serviceworker-webpack-plugin": "^1.0.1",
     "slate": "^0.44.10",
     "slate-html-serializer": "^0.7.34",
     "slate-plain-serializer": "^0.6.34",
