--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,8 @@
 {
   "extends": ["airbnb", "prettier", "prettier/react"],
+  "env": {
+    "browser": true
+  },
   "plugins": ["prettier"],
   "parser": "babel-eslint",
   "rules": {
