--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.2.0",
     "webpack-merge": "^4.1.4",
-    "webpack-visualizer-plugin": "^0.1.11",
-    "workbox-webpack-plugin": "^4.1.1"
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
     "@bugsnag/browser": "^5.1.0",
