--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "husky": "^1.2.0",
+    "image-webpack-loader": "^4.6.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.2",
     "pretty-quick": "^1.8.0",
