--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_ENV="development"
+NODE_ENV="development"
 HOST="localhost"
 APP_URL="http://localhost:3000"
 API_URL="http://localhost:3090"
@@ -7,3 +7,4 @@ BUGSNAG_API_KEY="bug-snag-api-key"
 GA_API_KEY="google-analytics-api-key"
 
 CLOUDINARY_PRESET="cloudinary-preset"
+MIX_PANEL_TOKEN="mix-panel-token"
