--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
+    "mixpanel-browser": "^2.27.1",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "pettier": "^1.1.0",
