--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "apollo-link-state": "^0.4.2",
     "classnames": "^2.2.6",
     "cloudinary-react": "^1.1.0",
+    "core-js": "3",
     "css-loader": "^2.1.1",
     "dotenv": "^6.1.0",
     "formik": "1.5",
@@ -85,6 +86,7 @@
     "immutable": "^4.0.0-rc.12",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
+    "memoize-one": "^5.0.4",
     "mixpanel-browser": "^2.27.1",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
