--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,8 @@ jobs:
           command: |
             sudo apt-get install python-dev python-pip
             sudo pip install awscli
-            yarn install && yarn build
+            yarn install
+            yarn build
             aws s3 sync ~/project/dist s3://healfit.co.uk --delete
             aws cloudfront create-invalidation --distribution-id E2H4X46OP5N91X --paths /*
             aws cloudfront create-invalidation --distribution-id EEW1QT8BI9JTU --paths /*
