--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       # run build
-      - run: npm install && npm run build
+      - run: yarn install && yarn build
 
   deploy-job:
     docker:
@@ -40,8 +40,8 @@ jobs:
           command: |
             sudo apt-get install python-dev python-pip
             sudo pip install awscli
-            npm install
-            npm run build
+            yarn install
+            yarn build
             aws s3 sync ~/project/dist s3://healfit.co.uk --delete
             aws cloudfront create-invalidation --distribution-id E2H4X46OP5N91X --paths /*
             aws cloudfront create-invalidation --distribution-id EEW1QT8BI9JTU --paths /*
