--- a/package.json
+++ b/package.json
@@ -76,8 +76,10 @@
     "apollo-link-error": "^1.1.5",
     "apollo-link-http": "^1.5.9",
     "apollo-link-state": "^0.4.2",
+    "brotli-gzip-webpack-plugin": "^0.5.0",
     "classnames": "^2.2.6",
     "cloudinary-react": "^1.1.0",
+    "compression-webpack-plugin": "^2.0.0",
     "core-js": "3",
     "css-loader": "^2.1.1",
     "dotenv": "^6.1.0",
