--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@bugsnag/browser": "^5.1.0",
     "@bugsnag/js": "^5.0.2",
     "@bugsnag/plugin-react": "^5.0.2",
+    "@convertkit/slate-lists": "^0.2.2",
     "apollo-cache-inmemory": "^1.3.12",
     "apollo-client": "^2.4.8",
     "apollo-link": "^1.2.6",
@@ -117,7 +118,7 @@
     "react-svg": "^7.2.5",
     "sass-loader": "^7.1.0",
     "serviceworker-webpack-plugin": "^1.0.1",
-    "slate": "^0.44.10",
+    "slate": "^0.44.9",
     "slate-html-serializer": "^0.7.34",
     "slate-plain-serializer": "^0.6.34",
     "slate-react": "^0.21.16",
