--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
     "@bugsnag/browser": "^5.1.0",
     "@bugsnag/js": "^5.0.2",
     "@bugsnag/plugin-react": "^5.0.2",
-    "@convertkit/slate-lists": "^0.2.2",
     "apollo-cache-inmemory": "^1.3.12",
     "apollo-client": "^2.4.8",
     "apollo-link": "^1.2.6",
@@ -84,6 +83,8 @@
     "core-js": "3",
     "css-loader": "^2.1.1",
     "dotenv": "^6.1.0",
+    "draft-convert": "^2.1.4",
+    "draft-js": "^0.10.5",
     "formik": "1.5",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
@@ -120,8 +121,6 @@
     "serviceworker-webpack-plugin": "^1.0.1",
     "slate": "^0.44.9",
     "slate-html-serializer": "^0.7.34",
-    "slate-plain-serializer": "^0.6.34",
-    "slate-react": "^0.21.16",
     "style-loader": "^0.23.1",
     "styled-components": "^4.1.1",
     "styled-tools": "^1.6.0",
