--- a/package.json
+++ b/package.json
@@ -89,8 +89,8 @@
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "history": "^4.7.2",
-    "html-to-react": "^1.3.4",
     "immutable": "^4.0.0-rc.12",
+    "interweave": "^11.1.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "memoize-one": "^5.0.4",
@@ -119,8 +119,6 @@
     "react-svg": "^7.2.5",
     "sass-loader": "^7.1.0",
     "serviceworker-webpack-plugin": "^1.0.1",
-    "slate": "^0.44.9",
-    "slate-html-serializer": "^0.7.34",
     "style-loader": "^0.23.1",
     "styled-components": "^4.1.1",
     "styled-tools": "^1.6.0",
