--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "mixpanel-browser": "^2.27.1",
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
+    "moment-timezone": "^0.5.25",
     "node-sass": "^4.11.0",
     "pettier": "^1.1.0",
     "polished": "^2.3.0",
@@ -119,6 +120,9 @@
     "react-share": "^2.4.0",
     "react-sortable-hoc": "^1.5.3",
     "react-svg": "^7.2.5",
+    "react-time-picker": "^3.5.2",
+    "react-timekeeper": "^1.1.0",
+    "react-times": "^3.1.12",
     "sass-loader": "^7.1.0",
     "serviceworker-webpack-plugin": "^1.0.1",
     "style-loader": "^0.23.1",
