--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "react-timekeeper": "^1.1.0",
     "react-times": "^3.1.12",
     "sass-loader": "^7.1.0",
+    "seamless-immutable": "^7.1.4",
     "serviceworker-webpack-plugin": "^1.0.1",
     "style-loader": "^0.23.1",
     "styled-components": "^4.1.1",
