fixed circle cu

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           name: Deploy to S3
           environment:
             NODE_ENV: production
-            APP_URL: https://api.healfit.co.uk"
+            APP_URL: https://healfit.co.uk
             API_URL: https://api.healfit.co.uk
             BUGSNAG_API_KEY: 3ed18fabf2445b22b785f539282a439a
             GA_API_KEY: UA-132673441-1
