--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "react-contenteditable": "^3.2.6",
     "react-dom": "^16.8.6",
     "react-ga": "^2.5.6",
+    "react-google-charts": "^3.0.14",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.7.1",
     "react-pose": "^4.0.5",
